# Apricadabra

./: .gitignore  CLAUDE.md  nuget.config
.github/workflows/: publish-nuget.yml  release-core.yml  release-loupedeck.yml  release-streamdeck.yml  release-trackpad.yml
assets/icons/: icon-catalog.html  icon-manifest.json
core/: CHANGELOG.md  Cargo.toml
core/docs/: protocol.md
core/sdk/csharp/Apricadabra.Client/: Apricadabra.Client.csproj  ApricadabraClient.cs  CoreLauncher.cs  Enums.cs
core/sdk/csharp/Apricadabra.Client.Tests/: Apricadabra.Client.Tests.csproj  EnumTests.cs  MessageBuildingTests.cs  ParsingTests.cs
core/src/: api_registry.rs  axis.rs  button.rs  config.rs  lib.rs  main.rs  protocol.rs  server.rs  vjoy.rs
core/tests/: api_registry_test.rs  axis_test.rs  button_test.rs  integration_test.rs  protocol_test.rs
docs/: tasks.md
loupedeck-plugin/ApricadabraPlugin/: ApricadabraPlugin.sln  nuget.config
scripts/: apricadabra-start.bat  apricadabra-stop.bat  build.bat  build.ps1  build.sh  stop.ps1  version.sh
streamdeck-plugin/: .gitignore  package-lock.json  package.json  tsconfig.json
streamdeck-plugin/com.apricadabra.streamdeck.sdPlugin/: .sdignore  manifest.json
streamdeck-plugin/src/: axis-bar-renderer.ts  core-connection.ts  plugin.ts  state-display.ts
trackpad-plugin/: nuget.config
trackpad-plugin/Apricadabra.Trackpad.Core/: Apricadabra.Trackpad.Core.csproj  (+1 more)
trackpad-plugin/Apricadabra.Trackpad.Core.Tests/: Apricadabra.Trackpad.Core.Tests.csproj  BindingEngineTests.cs  ContactTrackerTests.cs  GestureRecognizerTests.cs
(+63 files in other folders)
